<resources>
    <string name="app_name">Food Nutrition</string>

    <string name="app_sub_name">khuntankit@outlook.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="admob_privacy_link">https://www.your.com/privacyurl</string>

    <string name="google_maps_key">AIzaSyDqJZDEt2DHp6Nm0aGtAIgTzoaFxVh1mag</string>

    <string name="product">Products</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>

    <string name="main_activity">Main Activity Food Nutrition</string>

    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="exit">Exit</string>
    <string name="loading">Loading....</string>

    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_register">REGISTER</string>
    <string name="button_text_forgot_password">FORGOT PASSWORD ?</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="conform_password">Conform Password</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_name">please enter name</string>
    <string name="button_text_skip">Skip</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_failed">Login Failed</string>

    <string name="name_profile">Name :-</string>
    <string name="email_profile">Email :-</string>
    <string name="password_profile">Password :-</string>
    <string name="confirm_password_profile">confirm Password :-</string>
    <string name="phone_profile">Phone :-</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Success Full Save Profile</string>
    <string name="send">Send</string>
    <string name="action_logout">Log out</string>
    <string name="view_room">View Product</string>
    <string name="reviews">Reviews</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="setting">Setting</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="your_message">Your Message:-</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>

</resources>
