<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/welcome_back"
            android:textColor="@color/textView_login"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_into_continue"
            android:textColor="@color/textView_sub_title_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/user" />


            <EditText
                android:id="@+id/editText_email_login_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textView_login"
                android:textColorHint="@color/textView_login"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/editText_password_login_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textView_login"
                android:textColorHint="@color/textView_login"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <cn.refactor.library.SmoothCheckBox
                android:id="@+id/checkbox_login_activity"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:color_checked="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/remember_me"
                android:textColor="@color/textView_login"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <Button
                android:id="@+id/button_login_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_background"
                android:text="@string/button_text_login"
                android:textColor="@color/textView_button_login"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_skip_login_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_skip_background"
                android:text="@string/button_text_skip"
                android:textColor="@color/textView_button_skip_login"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_forget_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/textView_forgot_password_login"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_yet"
                    android:textColor="@color/textView_login"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signup"
                    android:textColor="@color/view_highlight_login_register"
                    android:textSize="16sp" />

            </LinearLayout>


            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/textView_button_skip_login" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>