<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/signup"
            android:textColor="@color/textView_register"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/editText_name_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/textView_register"
                android:textColorHint="@color/textView_hint_register"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/editText_email_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textView_register"
                android:textColorHint="@color/textView_hint_register"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/editText_password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textView_register"
                android:textColorHint="@color/textView_hint_register"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/editText_conform_password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textView_register"
                android:textColorHint="@color/textView_hint_register"
                android:textSize="16sp" />

        </LinearLayout>


        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/editText_phoneNo_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:hint="@string/phoneNo"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/textView_register"
                android:textColorHint="@color/textView_hint_register"
                android:textSize="16sp" />

        </LinearLayout>

        <include
            layout="@layout/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_login_background"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/register"
            android:textColor="@color/textView_already_register"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_yet"
                    android:textColor="@color/textView_already_register"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/register_login_text"
                    android:textColor="@color/view_highlight_login_register"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/view_highlight_login_register" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>